fix double prefix in pdf link

--- a/src/main/resources/export/export_zert.hbs.html
+++ b/src/main/resources/export/export_zert.hbs.html
@@ -341,7 +341,7 @@
                 </tr>
             </table>
             <p>
-                {{ Lang.result_detail_link }}: <br/><a href="https://www.netztest.at/{{ Lang.lang }}/Opentest?O{{open_test_uuid}}">https://www.netztest.at/{{ Lang.lang }}/Opentest?O{{open_test_uuid}}</a>
+                {{ Lang.result_detail_link }}: <br/><a href="https://www.netztest.at/{{ Lang.lang }}/Opentest?{{open_test_uuid}}">https://www.netztest.at/{{ Lang.lang }}/Opentest?{{open_test_uuid}}</a>
             </p>
 
             <h3>{{ Lang.detailed_result }}</h3>
